Repeater: Advanced layout - Fix padding when field is not visible

--- a/assets/src/components/repeater/layout/advanced/index.scss
+++ b/assets/src/components/repeater/layout/advanced/index.scss
@@ -126,3 +126,7 @@ $advenced-item-index-height: 40px;
     padding: $section-padding;
   }
 }
+
+.tf-repeater-advanced-item-field:has(> div[data-overlay-container="true"]:empty) {
+  display: none;
+}
